from typing import List
from domain.compound.locomotive import Locomotive
from domain.compound.coach import Coach
from domain.railway.route import Route
from domain.enums.enums import TrainState
from domain.exceptions.exceptions import InvalidStateError


class Compound:
    __compound_id_counter = 1

    def __init__(self, locomotive: Locomotive, coaches: List[Coach], compound_id: int = None):
        self.locomotive = locomotive
        self.coaches = sorted(coaches, key=lambda c: c.number)
        if compound_id is None:
            self.__compound_id = Compound.__compound_id_counter
            Compound.__compound_id_counter += 1
        else:
            self.__compound_id = compound_id
            if compound_id >= Compound.__compound_id_counter:
                Compound.__compound_id_counter = compound_id + 1
        self.__current_pos = 0
        self.state = TrainState.STOPPED

    @property
    def compound_id(self):
        return self.__compound_id

    @classmethod
    def get_id_counter(cls) -> int:
        return cls._Compound__compound_id_counter

    @property
    def current_pos(self):
        return self.__current_pos

    def add_coach(self, coach: Coach):
        self.coaches.append(coach)
        self.coaches.sort(key=lambda c: c.number)

    def move_along_route(self, route: Route):
        self.check_state()
        if self.state != TrainState.STOPPED and self.state != TrainState.AT_STATION:
            raise InvalidStateError("Cannot move from this state")
        self.state = TrainState.MOVING
        self.__current_pos += 1
        if self.__current_pos >= len(route.stations):
            print(f"The compound {self.__compound_id} has completed the route")
            self.state = TrainState.STOPPED
            return
        current_station = route.stations[self.__current_pos]
        print(f"The compound {self.__compound_id} arrived at {current_station.name}")
        self.state = TrainState.AT_STATION

    def process_station_actions(self):
        if self.state != TrainState.AT_STATION:
            raise InvalidStateError("Cannot process station actions from this state")
        self.state = TrainState.AT_STATION
        for coach in self.coaches:
            coach.free_coach()

    def check_state(self):
        self.locomotive.check_state()
        if not self.locomotive.is_usable:
            self.state = TrainState.MAINTENANCE
        else:
            self.state = TrainState.STOPPED




